# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
day1/: readme.md  solution.java  solution.py  solution_day1.py  test_solution_day1.py  visualization.ipynb
day10/: file.txt  solution_day10.py  test_solution_day10.py
day2/: readme.md  solution.py  solution_day2.py  test_solution_day2.py
day3/: redme.md  solution.py  solution_day3.py  test_solution_day3.py
day4/: redme.md  solution.py  solution_day4.py  test_solution_day4.py
day5/: readme.md  solution_day5.py  test_solution_day5.py
day6/: readme.md  solution_day6.py  test_solution_day6.py
day7/: readme.md  solution_day7.py
day8/: solution_day8.py  test_solution_day8.py
day9/: fi  fi.txt  solution_day9.py  test_solution_day9.py
utility/: api.py  session_cookie.txt
