[metadata]
name = Advent of code 2022
description = solution Advent of code 2022
author = Damiano Nardi
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32




[options]
python_requires = >=3.8
packages =utility
zip_safe = no


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24



